example/lib/src/generated/errors/errors_localization_pt.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Portuguese (`pt`).
class ErrorsLocalizationPt extends ErrorsLocalization {
  ErrorsLocalizationPt([String locale = 'pt']) : super(locale);

  @override
  String get error => 'Ocorreu um erro';

  @override
  String get unexpectedError => 'Ocorreu um erro inesperado';

  @override
  String get bugReportSentText => 'Relatório de bug enviado com sucesso.';
}

/// The translations for Portuguese, as used in Brazil (`pt_BR`).
class ErrorsLocalizationPtBr extends ErrorsLocalizationPt {
  ErrorsLocalizationPtBr() : super('pt_BR');

  @override
  String get error => 'Ocorreu um erro';

  @override
  String get unexpectedError => 'Ocorreu um erro inesperado';

  @override
  String get bugReportSentText => 'Relatório de bug enviado com sucesso.';
}
